--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,8 @@ body{
 	min-width: 100%;
 }
 
+/*Sidepanels*/
+
 #rick-img, #moarty-img{
 	margin: auto;
 	vertical-align: middle;
@@ -37,6 +39,8 @@ body{
 	height: inherit;
 	display: flex;
 }
+
+/*Center display*/
 
 #center{
 	display: block;
@@ -49,7 +53,6 @@ body{
 #main-screen-row{
 	height: 400px;
 }
-
 
 #main-screen{
 	width: 100%;
@@ -70,6 +73,7 @@ body{
 
 #wordGuess{
 	height: 70%;
+	padding-top: 50px;
 }
 
 .panel{
@@ -81,7 +85,7 @@ body{
 	padding: 10px;
 	height: 70%;
 	text-align: center;
-	vertical-align: middle;
+	overflow: auto;
 }
 
 .letter {
@@ -91,8 +95,5 @@ body{
 	padding: 2px;
 	float: left;
 	margin: 2px;
-}
-
-.letter-button-color {
 	color: darkcyan;
 }
